delete unnecessary lines

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,4 @@
-body {
-    height: 100vh;
+body {    
     background-color: #222831;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
@@ -17,7 +16,7 @@ body {
 
 main {
     width: 100%;
-    
+    height: 100%;
     transition: all .4s ease;
 }
 
