--- a/styles/things-to-do.css
+++ b/styles/things-to-do.css
@@ -81,7 +81,7 @@ main {
     transition: all .5s ease-in-out;
 }
 
-.appear{
+.appear {
     opacity: 1;
     transform: translateY(0%);
 }
@@ -111,6 +111,7 @@ main {
 }
 
 /* wrapper of each image */
+
 .main-img-wrapper {
     width: 100%;
     height: 100%;
@@ -126,7 +127,7 @@ main {
     position: absolute;
     bottom: .4rem;
     left: .7rem;
-    font-size: 1.1rem;    
+    font-size: 1.1rem;
     text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
 }
 
@@ -136,7 +137,6 @@ main {
     object-fit: cover;
     opacity: .9;
     transition: transform .5s ease;
-    
 }
 
 .main-img-wrapper img:hover {
@@ -156,4 +156,153 @@ main {
 
 .food .big {
     grid-column: 2 / 4;
+}
+
+/* RESPONSIVENESS */
+
+@media (max-width: 1150px) {
+    .banner-title {
+        width: 90%;
+    }
+}
+
+@media (max-width: 1045px) {
+    .banner {
+        margin-top: 11rem;
+    }
+
+    .banner-title {
+        width: 95%;
+        line-height: 5.5rem;
+        font-size: 4.5rem;
+    }
+
+    main {
+        width: 90%;
+    }
+
+    .main-content-intro {
+        font-size: 1.55rem;
+    }
+}
+
+@media (max-width: 900px) {
+    .banner-title {
+        width: 97%;
+        font-size: 4.2rem;
+    }
+
+    main {
+        width: 94%;
+    }
+
+    .general-container {
+        grid-auto-rows: 11.5rem;
+    }
+}
+
+@media (max-width: 830px) {
+    .banner-title {
+        font-size: 3.5rem;
+        line-height: 4.6rem;
+    }
+}
+
+@media (max-width: 705px) {
+    .banner {
+        margin-top: 13rem;
+    }
+
+    .banner-title {
+        width: 99%;
+        font-size: 3.1rem;
+        line-height: 4.1rem;
+        margin: 0 auto;
+        letter-spacing: 0.1rem;
+    }
+
+    .general-container {
+        grid-auto-rows: 10rem;
+    }
+}
+
+@media (max-width: 590px) {
+
+    /* Intro */
+    .banner {
+        margin-top: 14rem;
+    }
+
+    .banner-title {
+        font-size: 2.6rem;
+        line-height: 3.6rem;
+        letter-spacing: 0.05rem;
+    }
+
+    /* Main Content */
+    .main-content-intro {
+        font-size: 1.3rem;
+        line-height: 1.2;
+    }
+
+    /* Image containers */
+    .general-container {
+        grid-auto-rows: 5rem;
+        grid-template-columns: repeat(4, minmax(3rem, 1fr));
+    }
+
+    .main-img-wrapper {
+        grid-column: span 2;
+        grid-row: span 2;
+        border-radius: 3%;
+    }
+
+    .general-container .big {
+        grid-row: span 3;
+        grid-column: span 4;
+    }
+
+    .festivals .big {
+        grid-column: 1/ span 4;
+        grid-row: 5 / span 3;
+    }
+
+    .food .big {
+        grid-row: 3 / span 3;
+    }
+}
+
+@media (max-width: 490px) {
+    .banner-title {
+        letter-spacing: 0;
+        text-align: center;
+        font-size: 2.7rem;
+    }
+
+    .attractions,
+    .festivals,
+    .food,
+    .relaxation {        
+        margin: 3rem auto;        
+    }
+
+    .main-content-intro{
+        font-size: 1.15rem;
+    }
+
+    .main-img-wrapper figcaption{
+        font-size: 1rem;
+        bottom: .2rem;
+        left: .5rem;
+    }
+}
+
+@media (max-width: 350px){
+    .banner{
+        margin-top: 12rem;
+    }
+
+    .banner-title{
+        font-size: 2.4rem;
+    }
 }
