--- a/styles/explore.css
+++ b/styles/explore.css
@@ -169,12 +169,15 @@ body{
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 12rem;
-    height: 3rem;
+    width: 10rem;
+    height: 3rem;    
+    text-transform: uppercase;    
     background-color: rgba(256, 256, 256, .5);
     text-align: center;
     font-size: 1.5rem;
+    letter-spacing: 2px;
     border: none;
+    border-top-left-radius: 5%;
     outline: none;
     cursor: pointer;
     transition: background-color .4s ease;
@@ -182,7 +185,7 @@ body{
 }
 
 .read-btn:hover{
-    background-color: rgba(256, 256, 256, .9);
+    background-color: rgba(256, 256, 256, .9);    
 }
 
 .fadeIn::after{
